# 2048_SNN

./: CMakeLists.txt
include/: board.h  move.h  pattern.h  policy.h
src/: board.cpp  pattern.cpp  policy.cpp
test/: test_board.cpp  test_pattern.cpp  test_play_games.cpp  test_policy.cpp  test_train_loop.cpp
